Align mirror action buttons to right, fix detect host keys padding and fix multiple push mirrors

--- a/app/assets/stylesheets/pages/settings.scss
+++ b/app/assets/stylesheets/pages/settings.scss
@@ -352,3 +352,7 @@
 .push-pull-table {
   margin-top: 1em;
 }
+
+.mirror-action-buttons {
+  padding-right: 0 !important;
+}
